Added Info section to HTML, color to CSS, outline for JS

--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,19 @@
     width: 600px;
     background-color: linen;
 }
+
+#rectangle {
+    background-color: green;
+}
+
+#square {
+    background-color: red;
+}
+
+#circle {
+    background-color: purple;
+}
+
+#triangle {
+    background-color: yellow;
+}
